# serenity

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  index.html  params.json
docs/: CMakeLists.txt  Doxyfile  customdoxygen.css
examples/: CMakeLists.txt
examples/basic_http/: CMakeLists.txt  README.md  basic_http.cc  basic_http.hpp
examples/monitor_example/: CMakeLists.txt  monitor.cc  monitor.hpp
examples/monitor_example/html/: index.html
include/serenity/: http.hpp  serenity.hpp
include/serenity/common/: request_dispatcher.hpp  service.hpp  service_resolver.hpp
include/serenity/http/: file_service.hpp  protocol_handler.hpp  request.hpp  request_dispatcher.hpp  request_handler.hpp  response.hpp  service.hpp  service_resolver.hpp  versioned_handler.hpp
include/serenity/http/policies/: helpers.hpp  url.hpp
include/serenity/net/: connection.hpp  connection_manager.hpp  protocol_handler.hpp  server.hpp
spikes/: CMakeLists.txt
spikes/url_policies/: CMakeLists.txt  README.md  main.cc  policy_test.cc  url_policies.hpp
src/: .syntastic_cpp_config  CMakeLists.txt
src/net/: connection.cc
test/: .syntastic_cpp_config  CMakeLists.txt  common.cc  common.hpp  http_request.cc  http_request_handler.cc  http_server.cc  url_policy.cc
