###############################################################################
# Serenity - Build
#  Builds libserenity.a
###############################################################################

set(serenity_SRCS
    # HTTP Sources
#    http/request.cc
#    http/response.cc
#    net/server.cc
#     net/connection.cc
    )


# libserenity.a target
#add_library(serenity STATIC ${serenity_SRCS})
